# Senior-Project

./: .gitignore  .prettierignore  .prettierrc  README.md  Taskfile.yml  manage.py  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: push.yml
ophthalmology_portal/: asgi.py  settings.py  urls.py  wsgi.py
ophthalmology_portal/Core/: apps.py
ophthalmology_portal/Core/forms/: __init__.py  appointment_request_form.py  base_user_form.py  exam_creation_form.py  insurance_claim_form.py  patient_info_form.py  prescription_creation_form.py  test_information_creation_form.py  user_forms.py
ophthalmology_portal/Core/migrations/: 0001_initial.py  0002_alter_exammodel_occular_exam_information_and_more.py  0002_remove_patientusermodel_patient_id.py  0003_alter_visualaccuitymodel_os_visual_accuity_and_more.py  0003_auto_20250219_0055.py  0004_alter_exammodel_options_exammodel_status.py  0004_tokenauthmodel.py  0005_alter_exammodel_options_and_more.py  0005_alter_tokenauthmodel_token.py  0006_alter_prescriptionmodel_options.py  (+59 more)
ophthamology_portal/: asgi.py  settings.py  urls.py  wsgi.py
ophthamology_portal/Core/: apps.py
opthamology_portal/: manage.py  urls.py  wsgi.py
opthamology_portal/opthamology_portal/: settings.py
patient_portal/appointment_request/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
patient_portal/patient_portal/: settings.py  urls.py
patient_portal/patients/: models.py  urls.py  views.py
(+101 files in other folders)
